--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.5.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/ropa-sans": "^5.0.13",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.10.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "swiper": "^11.1.4",
     "tailwindcss": "^3.4.4"
   }
 }
