--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^3.5.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/nunito-sans": "^5.0.13",
     "@fontsource/ropa-sans": "^5.0.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
