--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.10.1",
+    "glightbox": "^3.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.4",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "yet-another-react-lightbox": "^3.21.0"
   }
 }
