--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "swiper": "^11.1.4",
     "tailwindcss": "^3.4.4",
+    "tw-elements": "^2.0.0",
     "yet-another-react-lightbox": "^3.21.0"
   }
 }
