--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.10.1",
     "glightbox": "^3.3.0",
+    "pnpm": "^9.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.4",
